refactor: service에 존재하던 로직을 도메인 객체로 이동